--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -12,7 +12,8 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/upload-artifact@v3.1.3
+
 
       - name: Set up Python
         uses: actions/setup-python@v4
