--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -1,42 +1,32 @@
-
 name: Run Robot Framework Tests
-
-on:
+'on':
   push:
     branches:
       - TriggerEmail
-
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/upload-artifact@f5cb1d0f674236624ab2489b1666ae30f9a4f8c5
-
-
+        uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Run Robot Framework tests
         id: test-step
         run: |
           robot -d results ./TestCases/Files || echo "Tests failed"
-
       - name: Upload Robot test reports
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: robot-results
           path: results/
-
       - name: Check Robot test result
         id: check-result
         run: |
