--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -1,43 +1,48 @@
 name: Run Robot Framework Tests
-'on':
+
+on:
   push:
     branches:
       - TriggerEmail
+
 jobs:
   test:
     runs-on: ubuntu-22.04
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run Robot Framework tests
         id: test-step
         run: |
           robot -d results ./TestCases/Files || echo "Tests failed"
+
       - name: Upload Robot test reports
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: robot-results
           path: results/
+
       - name: Check Robot test result
         id: check-result
         run: |
-          if [ -f results/output.xml ]; then
-            echo "status=pass" >> $GITHUB_OUTPUT
-          else
+          if grep -q 'FAIL' results/output.xml; then
             echo "status=fail" >> $GITHUB_OUTPUT
+          else
+            echo "status=pass" >> $GITHUB_OUTPUT
           fi
-
 
       # - name: Send email
       #   if: always() # Run regardless of success/failure
