--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Upload Robot test reports
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3.1.3  # <-- use fixed version
         with:
           name: robot-results
           path: results/
@@ -38,31 +38,8 @@ jobs:
       - name: Check Robot test result
         id: check-result
         run: |
-          if grep -q 'FAIL' results/output.xml; then
-            echo "status=fail" >> $GITHUB_OUTPUT
-          else
+          if [ -f results/output.xml ]; then
             echo "status=pass" >> $GITHUB_OUTPUT
+          else
+            echo "status=fail" >> $GITHUB_OUTPUT
           fi
-
-      # - name: Send email
-      #   if: always() # Run regardless of success/failure
-      #   uses: dawidd6/action-send-mail@v3
-      #   with:
-      #     server_address: smtp.example.com
-      #     server_port: 587
-      #     username: ${{ secrets.SMTP_USERNAME }}
-      #     password: ${{ secrets.SMTP_PASSWORD }}
-      #     subject: |
-      #       GitHub Actions Test Report: ${{ steps.check-result.outputs.status }}
-      #     to: recipient@example.com
-      #     from: GitHub Actions <github@example.com>
-      #     content_type: text/plain
-      #     body: |
-      #       Hello,
-
-      #       The automation tests have completed with status: ${{ steps.check-result.outputs.status }}.
-
-      #       Please check the logs in the GitHub Action run for more details.
-
-      #       Regards,
-      #       CI System
