--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -28,12 +28,12 @@ jobs:
         run: |
           robot -d results ./TestCases/Files || echo "Tests failed"
 
-      - name: Upload Robot test reports
-        if: always()
-        uses: actions/upload-artifact@v3  # <-- use fixed version
-        with:
-          name: robot-results
-          path: results/
+      # - name: Upload Robot test reports
+      #   if: always()
+      #   uses: actions/upload-artifact@v3  # <-- use fixed version
+      #   with:
+      #     name: robot-results
+      #     path: results/
 
       - name: Check Robot test result
         id: check-result
