--- a/.github/workflows/robot-tests.yml
+++ b/.github/workflows/robot-tests.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -25,16 +25,17 @@ jobs:
             pip install -r requirements.txt
           else
             echo "No requirements.txt found. Skipping pip install."
-            fi
-        
+          fi
+
       - name: Run Robot Framework tests
         id: test-step
+        continue-on-error: true
         run: |
-          robot -d results ./TestCases/Files || echo "Tests failed"
+          robot -d results ./TestCases/Files
 
       - name: Upload Robot test reports
         if: always()
-        uses: actions/upload-artifact@v3  # <-- use fixed version
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: robot-results
           path: results/
@@ -47,3 +48,7 @@ jobs:
           else
             echo "status=fail" >> $GITHUB_OUTPUT
           fi
+
+      - name: Fail job if tests failed
+        if: steps.test-step.outcome != 'success'
+        run: exit 1
